Don't cancel download when dismissing the notification

BUG=698321

Review-Url: https://codereview.chromium.org/2729623007
Cr-Commit-Position: refs/heads/master@{#454946}

Former-commit-id: 18aa71703fa522fbd6445fe0e3113e9b98d3c3a4